--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 .dart_tool/
 .packages
 build/
+android/
+linux/
+web/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
