--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 android/
 linux/
 web/
+windows/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
